--- a/static/scripts/scss/_button.scss
+++ b/static/scripts/scss/_button.scss
@@ -25,4 +25,218 @@
     background-color: #3e8e41;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
-}         
+}      
+
+.transparent-button {
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 1px;
+  color: white;
+  transition: 0.8s;
+}
+
+.transparent-button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  transform: scale(.98);
+  background-color: #74d8b7;
+}
+
+#button-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.download-button {
+  background-color: black;
+  
+  color: white;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
+  transition: 1.2s;
+  text-decoration: none !important;
+}
+
+.download-button:hover {
+  transform: scale(1.1);
+  background-color: $main-color;
+  border: 1px solid black;
+  border-radius: 2px;
+  color: black;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+// Variables
+$color: #295291;
+$color-dark: black;
+$speed: "0.25s";
+$transition: all #{$speed} cubic-bezier(0.310, -0.105, 0.430, 1.400);
+
+/* Main Styles */
+.intro-button {
+  display: block;
+  background-color: $color;
+  width: 250px;
+  height: 75px;
+  line-height: 75px;
+  margin: auto;
+  color: #fff;
+  position:absolute;
+  top: 25rem;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 5px;
+  box-shadow: 0 0 20px 0 rgba(0,0,0,.3);
+  transition: $transition;
+  transition: color 0s;
+  
+  span,
+  .icon {
+    display: block;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    top: 0;
+  }
+  
+  span {
+    width: 72%;
+    line-height: inherit;
+    font-size: 18px;
+    left: 0;
+    transition: $transition;
+    
+    &:after {
+      content: '';
+      background-color: $color-dark;
+      width: 2px;
+      height: 70%;
+      position: absolute;
+      top: 15%;
+      right: -1px;
+    }
+  }
+  
+  .icon {
+    width: 28%;
+    right: 0;
+    transition: $transition;
+    
+    .fa {
+      font-size: 30px;
+      vertical-align: middle;
+      transition: $transition, height #{$speed} ease;
+    }
+  }
+  
+  &:hover {
+    
+    span {
+      left: -72%;
+      opacity: 0;
+    }
+    
+    .icon {
+      width: 100%;
+      
+      .fa {
+        font-size: 45px;
+      }
+    }
+  }
+  
+  &:hover {
+    opacity: .9;
+    color: black;
+  }
+  
+  &:active {
+    opacity: 1;
+  }
+}
+
+.buttonDownload {
+  text-align: center;
+	position: relative;
+	padding: 10px 25px;
+  
+	background-color: $off-color-dark;
+	color: white;
+  
+	font-family: sans-serif;
+	text-decoration: none;
+	font-size: 0.9em;
+	text-indent: 15px;
+}
+
+.buttonDownload:hover {
+	background-color: #333;
+	color: white;
+}
+
+.buttonDownload:before, .buttonDownload:after {
+	content: ' ';
+	display: block;
+	position: absolute;
+	left: 15px;
+	top: 52%;
+}
+
+/* Download box shape  */
+.buttonDownload:before {
+	width: 10px;
+	height: 2px;
+	border-style: solid;
+	border-width: 0 2px 2px;
+}
+
+/* Download arrow shape */
+.buttonDownload:after {
+	width: 0;
+	height: 0;
+	margin-left: 3px;
+	margin-top: -7px;
+  
+	border-style: solid;
+	border-width: 4px 4px 0 4px;
+	border-color: transparent;
+	border-top-color: inherit;
+	
+	animation: downloadArrow 2s linear infinite;
+	animation-play-state: paused;
+}
+
+.buttonDownload:hover:before {
+	border-color: #4CC713;
+}
+
+.buttonDownload:hover:after {
+	border-top-color: #4CC713;
+	animation-play-state: running;
+}
+
+/* keyframes for the download icon anim */
+@keyframes downloadArrow {
+	/* 0% and 0.001% keyframes used as a hackish way of having the button frozen on a nice looking frame by default */
+	0% {
+		margin-top: -7px;
+		opacity: 1;
+	}
+	
+	0.001% {
+		margin-top: -15px;
+		opacity: 0;
+	}
+	
+	50% {
+		opacity: 1;
+	}
+	
+	100% {
+		margin-top: 0;
+		opacity: 0;
+	}
+}
