fixed a button, added lost wand video, pause videos when not in view

--- a/static/scripts/css/main.css
+++ b/static/scripts/css/main.css
@@ -716,6 +716,10 @@ footer .icon {
   text-align: center;
 }
 
+#wand-video {
+  text-align: center;
+}
+
 .vert-center-text {
   position: absolute;
   top: 40%;
