--- a/static/scripts/scss/main.scss
+++ b/static/scripts/scss/main.scss
@@ -227,6 +227,10 @@ footer {
     text-align: center;
 }
 
+#wand-video {
+    text-align: center;
+}
+
 .vert-center-text {
     position: absolute; 
     top: 40%; 
